[package]
name = "ferrite"
version = "0.4.0"
authors = ["Mattheus Roxas <mattheusroxas@protonmail.com>"]
edition = "2018"
description = "A CLI for YouTube written in Rust."
readme = "README.md"
license = "LICENSE.md"

[dependencies]
structopt = {version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "3.0"
rustyline = "7.1.0"
youtube_dl = "0.6.0"
